--- a/crud/Makefile
+++ b/crud/Makefile
@@ -1,8 +1,8 @@
 # Liste des exécutables à générer
-all: bissextile.exe nbjour.exe trierVille.exe
+all: main.exe nbjour.exe trierVille.exe 
 
-bissextile.exe: bissextile.ml
-	ocamlopt -o bissextile.exe bissextile.ml
+main.exe: main.ml
+	ocamlfind ocamlc -package csv -linkpkg main.ml -o main.exe
 
 nbjour.exe: nbjour.ml
 	ocamlopt -o nbjour.exe nbjour.ml
@@ -12,5 +12,5 @@ trierVille.exe: trierVille.ml
 
 # Commande de nettoyage complète
 clean:
-	rm -f *.cmi *.cmx *.o *.obj *.exe
+	rm -f *.cmi *.cmx *.o *.obj *.exe *.cmo
 	@echo "Nettoyage terminé : seuls les fichiers .ml et le Makefile sont présents."
